--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ RABBITMQ_AUTH_QUEUE=auth_queue
 RABBITMQ_FILM_QUEUE=film_queue
 RABBITMQ_PERSON_QUEUE=person_queue
 RABBITMQ_OTHER_QUEUE=other_queue
+RABBITMQ_OCCUPATION_QUEUE=occupation_queue
+RABBITMQ_GENRE_QUEUE=genre_queue
+RABBITMQ_COUNTRY_QUEUE=country_queue
 
 
 
