--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3'
 services:
   rabbitmq:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 100M
+        reservations:
+          cpus: '0.5'
+          memory: 50M
     image: rabbitmq:3.11.13-management
     container_name: rabbitmq
     hostname: rabbitmq
@@ -12,6 +20,14 @@ services:
     env_file:
       - .env
   auth:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/auth/Dockerfile
@@ -20,11 +36,19 @@ services:
     depends_on:
       - rabbitmq
       - postgres
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - /usr/src/app/node_modules
     command: npm run start:dev auth
   film:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/film/Dockerfile
@@ -34,12 +58,20 @@ services:
       - rabbitmq
       - postgres
       - other
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - /usr/src/app/node_modules
     command: npm run start:dev film
 
   person:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/person/Dockerfile
@@ -49,11 +81,19 @@ services:
       - rabbitmq
       - postgres
       - other
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - /usr/src/app/node_modules
     command: npm run start:dev person
   other:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/auth/Dockerfile
@@ -63,11 +103,19 @@ services:
       - rabbitmq
       - postgres
 
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - /usr/src/app/node_modules
     command: npm run start:dev other
   api:
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/api/Dockerfile
@@ -81,23 +129,35 @@ services:
       - film
       - person
       - other
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+#    volumes:
+#      - .:/usr/src/app
+#      - /usr/src/app/node_modules
     command: npm run start:dev api
   postgres:
-    image: postgres
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 100M
+        reservations:
+          cpus: '0.5'
+          memory: 50M
+    container_name: postgres
+    image: postgres:14
     env_file:
       - .env
     ports:
       - '5432:5432'
-    volumes:
-      - ./db/data:/var/lib/postgresql/data
-  postgres_admin:
-    image: dpage/pgadmin4
-    depends_on:
-      - postgres
-    env_file:
-      - .env
-    ports:
-      - '15432:80'
+
+
+#    volumes:
+#      - ./db/data:/var/lib/postgresql/data
+#      - .:/var/lib/postgresql/data
+#  postgres_admin:
+#    image: dpage/pgadmin4
+#    depends_on:
+#      - postgres
+#    env_file:
+#      - .env
+#    ports:
+#      - '15432:80'
