--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
 version: '3'
 services:
   rabbitmq:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 100M
-        reservations:
-          cpus: '0.5'
-          memory: 50M
     image: rabbitmq:3.11.13-management
     container_name: rabbitmq
     hostname: rabbitmq
@@ -20,14 +12,6 @@ services:
     env_file:
       - .env
   auth:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/auth/Dockerfile
@@ -36,19 +20,11 @@ services:
     depends_on:
       - rabbitmq
       - postgres
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: npm run start:dev auth
   film:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/film/Dockerfile
@@ -60,20 +36,12 @@ services:
       - genre
       - occupation
       - country
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: npm run start:dev film
 
   person:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/person/Dockerfile
@@ -85,19 +53,11 @@ services:
       - genre
       - occupation
       - country
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: npm run start:dev person
   genre:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/genre/Dockerfile
@@ -111,14 +71,6 @@ services:
       - /usr/src/app/node_modules
     command: npm run start:dev genre
   country:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/country/Dockerfile
@@ -132,14 +84,6 @@ services:
       - /usr/src/app/node_modules
     command: npm run start:dev country
   occupation:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/occupation/Dockerfile
@@ -148,20 +92,11 @@ services:
     depends_on:
       - rabbitmq
       - postgres
-
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
-    command: npm run start:dev other
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    command: npm run start:dev occupation
   api:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
     build:
       context: ./
       dockerfile: ./apps/api/Dockerfile
@@ -175,35 +110,24 @@ services:
       - film
       - person
       - genre
-#    volumes:
-#      - .:/usr/src/app
-#      - /usr/src/app/node_modules
+
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: npm run start:dev api
   postgres:
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 100M
-        reservations:
-          cpus: '0.5'
-          memory: 50M
-    container_name: postgres
-    image: postgres:14
+    image: postgres
     env_file:
       - .env
     ports:
       - '5432:5432'
-
-
-#    volumes:
-#      - ./db/data:/var/lib/postgresql/data
-#      - .:/var/lib/postgresql/data
-#  postgres_admin:
-#    image: dpage/pgadmin4
-#    depends_on:
-#      - postgres
-#    env_file:
-#      - .env
-#    ports:
-#      - '15432:80'
+    volumes:
+      - ./db/data:/var/lib/postgresql/data
+  postgres_admin:
+    image: dpage/pgadmin4
+    depends_on:
+      - postgres
+    env_file:
+      - .env
+    ports:
+      - '15432:80'
