--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ RABBITMQ_AUTH_QUEUE=auth_queue
 RABBITMQ_FILM_QUEUE=film_queue
 RABBITMQ_PERSON_QUEUE=person_queue
 RABBITMQ_OTHER_QUEUE=other_queue
+RABBITMQ_OCCUPATION_QUEUE=occupation_queue
+
+
 
 
 
