--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ RABBITMQ_FILM_QUEUE=film_queue
 RABBITMQ_PERSON_QUEUE=person_queue
 RABBITMQ_OTHER_QUEUE=other_queue
 RABBITMQ_OCCUPATION_QUEUE=occupation_queue
+RABBITMQ_FILES_QUEUE=files_queue
 
 
 
