cimmit with fileSystem

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ RABBITMQ_FILM_QUEUE=film_queue
 RABBITMQ_PERSON_QUEUE=person_queue
 RABBITMQ_OTHER_QUEUE=other_queue
 RABBITMQ_OCCUPATION_QUEUE=occupation_queue
+RABBITMQ_GENRE_QUEUE=genre_queue
+RABBITMQ_COUNTRY_QUEUE=country_queue
+RABBITMQ_FILE_QUEUE=file_queue
 RABBITMQ_FILES_QUEUE=files_queue
 
 
