--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/swagger": "^6.3.0",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "jimp": "^0.22.8",
@@ -36,7 +37,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
