--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
+    "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/swagger": "^6.3.0",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "pg": "^8.10.0",
@@ -34,7 +36,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
