--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.4",
+    "@nestjs/serve-static": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
