--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
+    "@nestjs/serve-static": "^3.0.1",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "jimp": "^0.22.8",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.4",
-    "@nestjs/serve-static": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
@@ -43,7 +43,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.15.11",
     "@types/sequelize": "^4.28.15",
     "@types/supertest": "^2.0.11",
@@ -52,11 +52,11 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "29.0.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
