--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: rabbitmq:3.11.13-management
     container_name: rabbitmq
     hostname: rabbitmq
-    volumes:
-      - /var/lib/rabbitmq
+#    volumes:
+#      - /var/lib/rabbitmq
     ports:
       - '5672:5672'
       - '15672:15672'
