--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/bcryptjs": "^2.4.2",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "jimp": "^0.22.8",
     "jsonwebtoken": "^9.0.0",
@@ -48,12 +49,12 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@types/node": "18.15.11",
     "@types/sequelize": "^4.28.15",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -61,9 +62,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.5.0",
     "prettier": "^2.3.2",
+    "sequelize-test-helpers": "^1.4.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
