--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
-#RABBITMQ_HOST=rabbitmq:5672
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=rabbitmq:5672
+#RABBITMQ_HOST=localhost
 
 RABBITMQ_AUTH_QUEUE=auth_queue
 RABBITMQ_FILM_QUEUE=film_queue
@@ -18,8 +18,7 @@ RABBITMQ_PROFILE_QUEUE=profile_queue
 
 
 
-#POSTGRES_HOST=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=dbkinopoisk
 POSTGRES_PASSWORD=rootroot
