--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -6,6 +6,11 @@ COPY package*.json .
 
 RUN npm install
 
+
+
 COPY . .
 
 COPY ./dist/static ./dist/static
+#COPY picture ./usr/src/app/dist/static/
+
+
