commit with last commit v4

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -10,7 +10,7 @@ RUN npm install
 
 COPY . .
 
-COPY ./dist/static ./dist/static
-#COPY picture ./usr/src/app/dist/static/
+#COPY ./dist/static ./dist/static
+COPY picture ./picture
 
 
